Fixed text not showing up.

--- a/styling.css
+++ b/styling.css
@@ -12,7 +12,6 @@ body {
         z-index: 2; /* Ensure the top bar appears above the sidebar */
         display: block;
         box-shadow: 0px 5px 5px lightgray;
-        margin-left: 260px;
     }
 
     #sidebar {
@@ -120,7 +119,7 @@ body {
         border-radius: 15px;
         height: 25px;
         margin-right: 310px;
-        margin-left: -70px;
+        margin-left: 190px;
     }
 
     .name {
@@ -152,6 +151,6 @@ body {
     }
 
     .welcome-left {
-        left: 0;
-        margin-left: 320px;
+        margin-left: 600px;
+        color: black;
     }
